--- a/stayle.scss
+++ b/stayle.scss
@@ -13,18 +13,28 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    pad: 40px 40px;
+    pad: 40px ;
+    padding-bottom: 50px;
     &__list{
         display: flex;
         gap: 30px;
         align-items: center;
         &__link{
-            color: aqua;
+            color: #33323D;
         }
         &__link:hover{
-            color: rgb(255, 115, 0);
+            color:  #1f0edb;
+
         }
     }
+}
+strong{
+    color: #5FB4A2;
+
+}
+strong:hover{
+    color: #0a1dca;
+
 }
 .card1{
     width: 1100px;
@@ -113,6 +123,7 @@
             text-align: center;
             padding: 5px;
             border: 2px solid #33323D ;
+            color: #7c7a83;
            }
            &__a:hover{
             color: red;
@@ -137,7 +148,8 @@
     height: 35px;
     text-align: center;
     padding: 5px;
-    border: 2px solid #33323D ;
+    border: 2px solid #828186 ;
+    color: #636368;
    }
    &__a:hover{
     color: red;
@@ -173,4 +185,216 @@
         align-items: center;
     }
 
+}
+.bcard{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    &__box1{
+        width: 540px;
+        height: 500px;
+        background: #FFEFEC;
+        &__img1{
+            margin-top: 6px;
+        }
+
+    }
+    &__box2{
+        width: 300px;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        text-align: start;
+        font-size: 16px;
+        margin-right: 200px;
+        margin-top: 170px;
+        &__p{
+            line-height: 25px;
+            color: #33323D;
+        }
+        &__h1{
+            width: 350px;
+            font-size: 40px;
+            color: #33323D;
+        }
+    }
+
+}
+.bcard1{
+        width: 100%;
+        height: 500px;
+        display: flex;
+        justify-content: space-between;
+    &__box2{
+        width: 300px;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        text-align: start;
+        font-size: 16px;
+        margin-left: 200px;
+        margin-top: 170px;
+    
+        &__p{
+            line-height: 25px;
+            color: #33323D;
+        }
+        &__h1{
+            width: 350px;
+            font-size: 40px;
+            color: #33323D;
+        }
+    }
+    &__box1{
+        width: 540px;
+        height: 500px;
+        background: #4F63D8;
+
+
+        &__img2{ 
+          margin-top: 50px;
+          margin-left: 50px;
+        }
+
+    }
+}
+.bcard2{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    &__box1{
+        width: 540px;
+        height: 500px;
+        background: #8a898b;
+
+        &__img1{
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+
+    }
+    &__box2{
+        width: 300px;
+        height: 450px;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        text-align: start;
+        font-size: 16px;
+        margin-right: 200px;
+        margin-top: 140px;
+        &__p{
+            line-height: 25px;
+            color: #36353a;
+        }
+        &__h1{
+            width: 350px;
+            font-size: 40px;
+            color: #33323D;
+        }
+    }
+
+}
+.bcard3{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+&__box2{
+    width: 300px;
+    height: 450px;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    text-align: start;
+    font-size: 16px;
+    margin-left: 200px;
+    margin-top: 170px;
+
+    &__p{
+        line-height: 25px;
+        color: #33323D;
+    }
+    &__h1{
+        width: 350px;
+        font-size: 40px;
+        color: #33323D;
+    }
+}
+&__box1{
+    width: 540px;
+    height: 500px;
+    background: #41B4D3;
+
+
+
+    &__img2{ 
+      margin-top: 50px;
+      margin-left: 50px;
+    }
+
+}
+}
+hr{
+    border: 1px solid #b3b2b8;
+    
+}
+.ccard{
+    margin-top: 50px;
+    width: 100%;
+    height: 300px;
+    display: flex;
+    justify-content: space-between;
+    &__h1{
+        width: 350px;
+        font-size: 40px;  
+    }
+    &__div{
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        &__p{
+         width: 580px;
+         line-height: 25px;
+         color: #a5a4a8;
+        }
+    }
+}
+.ccard2{
+    margin-top: 70px;
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: space-between;
+    &__h1{
+        width: 350px;
+        font-size: 40px;
+    }
+    &__form{
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        &__input{
+            width: 500px;
+            height: 50px;
+            border: none;
+            background: #d8d7db;
+            padding-left: 20px;
+
+        }
+        &__input1{
+            width: 500px;
+            height: 100px;
+            border: none;
+            background: #d8d7db;
+            padding-left: 20px;
+            
+
+        }
+
+    }
 }
